--- a/ENS2_OPT_corrige_diffusivite.ipynb
+++ b/ENS2_OPT_corrige_diffusivite.ipynb
@@ -340,9 +340,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2.b\n",
+    "### Question\n",
     "\n",
-    "Tracer le profil piézométrique entre les 2 cours d'eau en considérant une recharge efficace $N = 300$ mm d'eau par an"
+    "#### Tracer le profil piézométrique entre les 2 cours d'eau en considérant une recharge efficace $N = 300$ mm d'eau par an"
    ]
   },
   {
@@ -391,9 +391,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 2.b\n",
+    "### Question\n",
     "\n",
-    "Dans le cas où la recharge est nulle, quel est le débit transitant au sein de l'aquifère pour un front d'écoulement unitaire $W=1$ mètre?"
+    "#### Dans le cas où la recharge est nulle, quel est le débit transitant au sein de l'aquifère pour un front d'écoulement unitaire $W=1$ mètre?"
    ]
   },
   {
@@ -476,6 +476,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## NON UTILISE - A VALIDER\n",
+    "\n",
     "### RECHARGE DEPUIS UN BASSIN\n",
     "\n",
     "## Solution de Hantush\n",
