--- a/ENS2_OPT_Superposition_champ_captant.ipynb
+++ b/ENS2_OPT_Superposition_champ_captant.ipynb
@@ -198,9 +198,10 @@
     "## Etude d'un champ captant\n",
     "\n",
     "### Question\n",
+    "On considère un aquifère confiné d'extension infinie, d'épaisseur constante, homogène de transmissivité $T$ = 2x10-3 et de coefficient d'emmagasinement $S$ = 2x10-4. 2 puits parfaits $F_1$ et $F_2$ sont exploités aux débits $Q_1$, et $Q_2$ durant une période $t$. On dispose d'un piézomètre d'observation $P$ situé à 50 mètres de $F_1$ et 450 mètres de $F2$ .\n",
     "Les conditions d'exploitation du champ captant sont les suivantes:\n",
     "- débit d'exploitation de $F_1$ : $Q_1$ = 80 m3/h\n",
-    "- débit d'exploitation de $F_2$ : $Q_2$ = \\130 m3/h\n",
+    "- débit d'exploitation de $F_2$ : $Q_2$ = 130 m3/h\n",
     "- durée d'exploitation $t$ = 1 heure\n",
     "\n",
     "Calculer le rabattement induit au piézomètre P à l'aide de la solution de Theis.\n",
