--- a/ENS2_OPT_Theis.ipynb
+++ b/ENS2_OPT_Theis.ipynb
@@ -397,7 +397,7 @@
         "df_file = pd.read_table('https://raw.githubusercontent.com/larroque852/NB_ENS2_OPT_HYDRODYN/main/ENS2_HYD_TD_EXO_CJ.csv',skiprows=1,\n",
         "                        delimiter=',', names = ['t_min','s1_m','s2_m','s3_m'])\n",
         "\n",
-        "# une représentation graphique brute\n",
+        "# une représentation graphique des données brutes brutes\n",
         "\n",
         "ax=df_file.plot(kind='scatter',x='t_min',y='s1_m', logx = True,color='red')\n",
         "ax.scatter(df_file['t_min'],df_file['s2_m'], color='blue')\n",
@@ -475,7 +475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "7iRuifBviF2r",
         "outputId": "51074c8b-900b-4265-8801-2aab30799104",
@@ -532,7 +532,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "4xXhw1OEiF2r",
         "outputId": "92fcbc4f-f33d-4708-da40-5c8019bbdcbb",
@@ -594,7 +594,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "DCQM1cVSiF2r",
         "outputId": "b2f49d22-da40-4cf9-a28f-9cbc1ba97f4f",
